docs/0.18.1/_sources/modeling/gallery/temporal/plot_gaussian_temporal.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_temporal_plot_gaussian_temporal.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_modeling_gallery_temporal_plot_gaussian_temporal.py:


.. _gaussian-temporal-model:

Gaussian Temporal Model
=======================

This model parametrises a gaussian time model.


.. math::
    F(t) = exp(-0.5* \frac{ (t - t_{ref})^2 } { \sigma^2 })

Example plot
------------
Here is an example plot of the model:


.. code-block:: default


    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt







YAML representation
-------------------
Here is an example YAML file using the model:


.. code-block:: default

    from gammapy.modeling.models import (
        GaussianTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    sigma = "3 h"
    t_ref = Time("2020-10-01")
    time_range = [t_ref - 0.5 * u.d, t_ref + 0.5 * u.d]
    gaussian_model = GaussianTemporalModel(t_ref=t_ref.mjd * u.d, sigma=sigma)
    gaussian_model.plot(time_range)
    plt.grid(which="both")


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=gaussian_model,
        name="gaissian_model",
    )
    models = Models([model])

    print(models.to_yaml())



.. image:: /modeling/gallery/temporal/images/sphx_glr_plot_gaussian_temporal_001.png
    :alt: plot gaussian temporal
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: gaissian_model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: GaussianTemporalModel
            parameters:
            -   name: t_ref
                value: 59123.0
                unit: d
            -   name: sigma
                value: 0.125
                unit: d






.. _sphx_glr_download_modeling_gallery_temporal_plot_gaussian_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_gaussian_temporal.py <plot_gaussian_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_gaussian_temporal.ipynb <plot_gaussian_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
